[tool.poetry]
name = "apidashboard"
version = "0.1.0"
description = ""
authors = ["Joe Ferreira Scholtz <joearrop@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
pandas = "^2.1.2"
streamlit = "^1.28.0"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
